--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   <properties>
     <java.version>1.8</java.version>
     <camel.version>2.14.0</camel.version>
+    <jackson.version>2.4.3</jackson.version>
   </properties>
 
   <dependencies>
@@ -41,9 +42,9 @@
       <artifactId>spring-boot-starter-data-rest</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.zapodot</groupId>
-      <artifactId>jackson-databind-java-optional</artifactId>
-      <version>2.4.2</version>
+      <groupId>com.fasterxml.jackson.datatype</groupId>
+      <artifactId>jackson-datatype-jdk8</artifactId>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>org.flywaydb</groupId>
